package cc39005364.q3;

public class Composite {
}
