package cc39005364.q3;

public class Conclusion extends Composite implements Icomposite{

}
