package cc39005364.q3;

public class Introduction extends Composite implements Icomposite{
}
